fixed some major button overlap issues

--- a/src/buttons.sass
+++ b/src/buttons.sass
@@ -1,4 +1,5 @@
 .btn
+  display: inline-block
   padding: 1rem 1.5rem
   color: $text-dark
   cursor: pointer
@@ -6,6 +7,7 @@
   border-radius: 5px
   border-color: transparent
   text-decoration: none
+  margin-top: 10px
 
 .btn-rounded
   border-radius: 30px
@@ -20,8 +22,14 @@
   margin: 0.4em 0
 
 .btn-link
-  background-color: transparent !important
+  background: transparent !important
   color: inherit
+
+.btn-light
+  background: white
+  color: var(--dark)
+  &:hover
+    background: var(--grey)
 
 @each $variation in $variations
   .btn-#{$variation}
